buttons for changing font size

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <title>Multiple Column Guitar Tabs</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="jquery-ui-1.11.4.custom/jquery-ui.css" />
     <script src="jquery-2.2.1.min.js"></script>
+    <script src="jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
     <script src="mctab.js"></script>
   </head>
   <body>
     <div id="top-panel">
         <h1 id="title">Multiple Column Tabs</h1>
+        <div id="change-text-size">
+          <button id="font-size-dec">-</button>
+          <button id="font-size-inc">+</button>
+        </div>
     </div>
     <div id="tab-panel">
       <span id="dummy"></span>
       <input id="tab-input" type="text">
-      <div id="tab-content">test<br /> testiiitest<br /> testiii</div>
+      <div id="tab-content">Paste here.</div>
     </div>
   </body>
 </html>
