--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="tab-panel">
       <span id="dummy"></span>
-      <div id="tab-content">Paste here.</div>
+      <div id="tab-content">Paste here!</div>
     </div>
   </body>
 </html>
