css buttons, header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script src="mctab.js"></script>
   </head>
   <body>
-    <div id="top-panel">
+    <header id="top-panel">
         <h1 id="title">Multiple Column Tabs</h1>
         <div id="change-text-size">
           <button id="font-size-dec">-</button>
           <button id="font-size-inc">+</button>
         </div>
-    </div>
+    </header>
     <div id="tab-panel">
       <span id="dummy"></span>
       <div id="tab-content">Paste here!</div>
